// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseEntry() miscellaneous 1`] = `
Object {
  "parsed": <React.Fragment>
    <React.Fragment>
      <React.Fragment>
        record
      </React.Fragment>
    </React.Fragment>
  </React.Fragment>,
  "size": -1,
  "traceUrl": null,
  "type": "string",
}
`;

exports[`parseEntry() miscellaneous 2`] = `
Object {
  "parsed": <React.Fragment>
    <React.Fragment>
      <React.Fragment>
        
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        in
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        Fragment
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        in
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        Grid5
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        (created
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        by
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        List6)
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        in
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        List6
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        (created
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        by
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        AutoSizer2)
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        in
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        div
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        (created
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        by
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        AutoSizer2)
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        in
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        AutoSizer2
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        (created
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        by
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        PlayerList)
      </React.Fragment>
    </React.Fragment>
  </React.Fragment>,
  "size": -1,
  "traceUrl": null,
  "type": "string",
}
`;

exports[`parseEntry() miscellaneous 3`] = `
Object {
  "parsed": <React.Fragment>
    <React.Fragment>
      <React.Fragment>
        
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        in
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        Fragment
      </React.Fragment>
    </React.Fragment>
  </React.Fragment>,
  "size": -1,
  "traceUrl": null,
  "type": "string",
}
`;

exports[`parseEntry() miscellaneous 4`] = `
Object {
  "parsed": <React.Fragment>
    <React.Fragment>
      <React.Fragment>
        Warning:
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        Each
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        child
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        in
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        a
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        list
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        should
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        have
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        a
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        unique
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        "key"
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        prop.%s%s
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        See
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        https://fb.me/react-warning-keys
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        for
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        more
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        information.%s
      </React.Fragment>
    </React.Fragment>
  </React.Fragment>,
  "size": -1,
  "traceUrl": null,
  "type": "string",
}
`;

exports[`parseEntry() object or array strings 1`] = `
Object {
  "parsed": Object {
    "message": "TypeError: Failed to fetch
    at Object.getRaw (http://localhost:8234/static/chunk-6MCQJ7Y6.js:208552:24)
    End of stack for Error object",
    "status": 0,
  },
  "size": 2,
  "type": "object",
}
`;

exports[`parseEntry() strings containing urls 1`] = `
Object {
  "parsed": <React.Fragment>
    <React.Fragment>
      <React.Fragment>
        rowRenderer
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        <Link
          target="_blank"
          to="https://example.com/path/to/file.js"
        >
          file.js:123:456
        </Link>
      </React.Fragment>
    </React.Fragment>
  </React.Fragment>,
  "size": -1,
  "traceUrl": <Link
    target="_blank"
    to="https://example.com/path/to/file.js"
  >
    file.js:123:456
  </Link>,
  "type": "string",
}
`;

exports[`parseEntry() strings containing urls 2`] = `
Object {
  "parsed": <React.Fragment>
    <React.Fragment>
      <React.Fragment>
        ENTRY
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        Object.createElementWithValidation
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        [as
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        createElement]
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        <Link
          target="_blank"
          to="https://example.com/path/to/file.js"
        >
          file.js:123:456
        </Link>
      </React.Fragment>
    </React.Fragment>
  </React.Fragment>,
  "size": -1,
  "traceUrl": <Link
    target="_blank"
    to="https://example.com/path/to/file.js"
  >
    file.js:123:456
  </Link>,
  "type": "string",
}
`;

exports[`parseEntry() strings containing urls 3`] = `
Object {
  "parsed": <React.Fragment>
    <React.Fragment>
      <React.Fragment>
        ENTRY
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        Object.createElementWithValidation
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        [as
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        createElement]
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        (https://example.com/path/to/file.js)
      </React.Fragment>
    </React.Fragment>
  </React.Fragment>,
  "size": -1,
  "traceUrl": null,
  "type": "string",
}
`;

exports[`parseEntry() strings containing urls 4`] = `
Object {
  "parsed": <React.Fragment>
    <React.Fragment>
      <React.Fragment>
        :1223:12
      </React.Fragment>
    </React.Fragment>
  </React.Fragment>,
  "size": -1,
  "traceUrl": null,
  "type": "string",
}
`;

exports[`parseEntry() strings containing urls 5`] = `
Object {
  "parsed": <React.Fragment>
    <React.Fragment>
      <React.Fragment>
        <Link
          target="_blank"
          to="https://example.com/path/to/file.js"
        >
          file.js:123:456
        </Link>
      </React.Fragment>
    </React.Fragment>
  </React.Fragment>,
  "size": -1,
  "traceUrl": <Link
    target="_blank"
    to="https://example.com/path/to/file.js"
  >
    file.js:123:456
  </Link>,
  "type": "string",
}
`;

exports[`parseEntry() strings containing urls 6`] = `
Object {
  "parsed": <React.Fragment>
    <React.Fragment>
      <React.Fragment>
        <Link
          target="_blank"
          to="https://example.com/path/to/file.js"
        >
          file.js:123:456
        </Link>
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        End
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        of
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        object
      </React.Fragment>
    </React.Fragment>
  </React.Fragment>,
  "size": -1,
  "traceUrl": <Link
    target="_blank"
    to="https://example.com/path/to/file.js"
  >
    file.js:123:456
  </Link>,
  "type": "string",
}
`;

exports[`parseEntry() strings containing urls 7`] = `
Object {
  "parsed": <React.Fragment>
    <React.Fragment>
      <React.Fragment>
        <Link
          target="_blank"
          to="https://example.com/path/to/file.js"
        >
          file.js:123:456
        </Link>
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        <Link
          target="_blank"
          to="https://example.com/path/to/file.js"
        >
          file.js:123:456
        </Link>
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        <Link
          target="_blank"
          to="https://example.com/path/to/file.js"
        >
          file.js:123:456
        </Link>
      </React.Fragment>
    </React.Fragment>
  </React.Fragment>,
  "size": -1,
  "traceUrl": <Link
    target="_blank"
    to="https://example.com/path/to/file.js"
  >
    file.js:123:456
  </Link>,
  "type": "string",
}
`;
